@@ -1,3 +1,9 @@
+2006-10-27  Sven Schuetz
+
+	* Makefile.am, sfcbrepos.sh.in, fileRepository.h, fileRepository.c, 
+	internalProvider.c,
+	Fixed 1578815: create fileRepository shared library
+
 2006-10-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* Makefile.am, classSchema2c.c, classProviderMem.c, classSchemaMem.c,
